--- a/index.html
+++ b/index.html
@@ -1,320 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sina Ghazi | Innovator, Strategist, and Leadership Expert</title>
-
-    <!-- Meta Tags for SEO -->
-    <meta name="description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
-    <meta name="keywords" content="Sina Ghazi, leadership, innovation, strategy, Multidimensional Leadership Cube, SMLC, consulting">
-    <meta name="author" content="Sina Ghazi">
-    <meta name="robots" content="index, follow">
-    <meta name="theme-color" content="#ffffff">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <link rel="canonical" href="https://sinaghazi.com/">
-
-    <!-- Open Graph Meta Tags -->
-    <meta property="og:title" content="Sina Ghazi | Innovator, Strategist, and Leadership Expert">
-    <meta property="og:description" content="Welcome to the official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC). Explore insights on leadership, innovation, and strategy.">
-    <meta property="og:image" content="https://sinaghazi.com/img/og-image.png">
-    <meta property="og:url" content="https://sinaghazi.com/">
-    <meta property="og:type" content="website">
-    <meta property="og:site_name" content="Sina Ghazi">
-    <meta property="og:locale" content="en_US">
-
-    <!-- Structured Data (JSON-LD) -->
-    <script type="application/ld+json">
-        {
-            "@context": "https://schema.org",
-            "@type": "WebSite",
-            "url": "https://sinaghazi.com/",
-            "name": "Sina Ghazi",
-            "description": "Official website of Sina Ghazi, creator of the Multidimensional Leadership Cube (SMLC).",
-            "publisher": {
-                "@type": "Person",
-                "name": "Sina Ghazi",
-                "url": "https://sinaghazi.com",
-                "logo": {
-                    "@type": "ImageObject",
-                    "url": "https://sinaghazi.com/img/sg-logo-transparent.png"
-                }
-            }
-        }
-    </script>
-
-    <!-- Favicon -->
-    <link rel="icon" href="img/icon/favicon.ico" type="image/x-icon">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/icon/favicon-16x16.png">
-
-    <!-- Stylesheets and Fonts -->
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600;700&display=swap" rel="stylesheet">
-    <link href="css/output.css" rel="stylesheet">
-
-    <!-- Import Map for Modules -->
-    <script type="importmap">
-        {
-          "imports": {
-            "three": "https://cdn.jsdelivr.net/npm/three@0.169.0/build/three.module.js",
-            "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.169.0/examples/jsm/"
-          }
-        }
-    </script>
-
-    <!-- Fathom - beautiful, simple website analytics -->
-    <script src="https://cdn.usefathom.com/script.js" data-site="ZAOYGYGK" defer></script>
-    <!-- / Fathom -->
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>SMLC - Sina's Multidimensional Leadership Cube</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
 </head>
-
-<body class="font-sans bg-white text-dark-gray">
-<header class="fixed top-0 left-0 right-0 bg-white border-b border-gray-200 z-50">
-    <div class="container mx-auto px-4 py-4 flex items-center justify-between">
-        <a href="/" class="logo">
-            <img src="img/sg-logo-transparent.png" alt="SG Logo" class="h-12">
-        </a>
-        <nav class="hidden lg:block">
-            <ul class="flex space-x-6">
-                <li><a href="index.html" class="text-gray-800 hover:text-primary">Home</a></li>
-                <li><a href="about.html" class="text-gray-800 hover:text-primary">About SMLC</a></li>
-                <li><a href="explore.html" class="text-gray-800 hover:text-primary">Explore the Model</a></li>
-                <li><a href="contact.html" class="text-gray-800 hover:text-primary">Contact</a></li>
-            </ul>
-        </nav>
-        <button class="lg:hidden">
-            <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16" />
-            </svg>
-        </button>
-    </div>
-</header>
-
-<!-- Mobile menu -->
-<div id="mobile-menu" class="fixed inset-0 bg-white z-50 hidden lg:hidden">
-    <div class="container mx-auto px-4 py-4">
-        <div class="flex justify-end">
-            <button id="close-menu" class="text-gray-800">
-                <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
-                </svg>
-            </button>
-        </div>
-        <nav class="mt-8">
-            <ul class="space-y-4">
-                <li><a href="index.html" class="block text-gray-800 hover:text-primary text-lg">Home</a></li>
-                <li><a href="about.html" class="block text-gray-800 hover:text-primary text-lg">About SMLC</a></li>
-                <li><a href="explore.html" class="block text-gray-800 hover:text-primary text-lg">Explore the Model</a></li>
-                <li><a href="contact.html" class="block text-gray-800 hover:text-primary text-lg">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-</div>
-<main class="pt-20 lg:pt-16" role="main">
-    <section class="section hero relative h-screen bg-cover bg-center" style="background-image: url('img/hero-background.jpg');">
-        <div class="absolute inset-0 bg-secondary bg-opacity-60"></div>
-        <div class="container mx-auto px-4 h-full flex items-center justify-center relative z-10">
-            <div class="text-center">
-                <h1 class="text-3xl md:text-4xl font-bold text-gray-800 mb-4">Sina's Multidimensional Leadership Cube</h1>
-                <h2 class="text-xl md:text-2xl text-gray-600 mb-8">A new perspective on leadership dynamics</h2>
-                <a href="#interactive" class="btn">Explore Now</a>
-            </div>
-        </div>
-        <div class="absolute bottom-8 left-1/2 transform -translate-x-1/2 scroll-down">
-            <a href="#introduction">▼</a>
-        </div>
-    </section>
-
-    <section id="introduction" class="section bg-white py-16">
-        <div class="container mx-auto px-4">
-            <p class="text-lg leading-relaxed">
-                Sina's Multidimensional Leadership Cube (SMLC) is a framework designed to analyze
-                leadership across personal, organizational, and societal levels. By examining the
-                interactions between these dimensions, SMLC offers insights into leadership dynamics
-                in our interconnected world. This tool can help individuals, organizations, and
-                policymakers better understand and address complex leadership challenges.
-            </p>
-        </div>
-    </section>
-
-    <section id="interactive" class="section bg-secondary py-16">
-            <div class="container mx-auto px-4 max-w-7xl">
-                <h2 class="text-3xl font-bold text-center mb-8">
-                    Explore the Dimensions of Leadership
-                </h2>
-
-                <!-- Main content container -->
-                <div class="lg:flex lg:gap-8">
-                    <!-- Left panel - Controls (1/3 width) -->
-                    <div class="w-full lg:w-1/3 mb-8 lg:mb-0">
-                        <div class="bg-white p-6 rounded-lg shadow-md">
-                            <!-- Level selection buttons -->
-                            <div class="space-y-2 mb-8">
-                                <div class="flex items-center mb-2">
-                                    <div class="w-3 h-3 rounded-full bg-primary mr-2"></div>
-                                    <span class="font-semibold">Primary Position</span>
-                                </div>
-                                <button
-                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-[#333333] text-white"
-                                        data-type="individual"
-                                >
-                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z" />
-                                    </svg>
-                                    <span>Individual</span>
-                                </button>
-
-                                <button
-                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-white text-[#333333] border border-[#333333]"
-                                        data-type="organization"
-                                >
-                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 21V5a2 2 0 00-2-2H7a2 2 0 00-2 2v16m14 0h2m-2 0h-5m-9 0H3m2 0h5M9 7h1m-1 4h1m4-4h1m-1 4h1m-5 10v-5a1 1 0 011-1h2a1 1 0 011 1v5m-4 0h4" />
-                                    </svg>
-                                    <span>Organization/Business</span>
-                                </button>
-
-                                <button
-                                        class="selection-btn w-full flex items-center p-3 rounded-lg transition-colors bg-white text-[#333333] border border-[#333333]"
-                                        data-type="society"
-                                >
-                                    <svg class="w-5 h-5 mr-3" fill="none" stroke="currentColor" viewBox="0 0 24 24">
-                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3.055 11H5a2 2 0 012 2v1a2 2 0 002 2 2 2 0 012 2v2.945M8 3.935V5.5A2.5 2.5 0 0010.5 8h.5a2 2 0 012 2 2 2 0 104 0 2 2 0 012-2h1.064M15 20.488V18a2 2 0 012-2h3.064M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
-                                    </svg>
-                                    <span>Society/Country</span>
-                                </button>
-                            </div>
-
-                            <!-- Sliders -->
-                            <div class="space-y-6">
-                                <div class="slider-group">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="xLabel">
-                                        X Axis: Individualism vs. Collectivism
-                                    </label>
-                                    <input
-                                            type="range"
-                                            id="xRange"
-                                            min="1"
-                                            max="5"
-                                            value="3"
-                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                                    />
-                                </div>
-
-                                <div class="slider-group">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="yLabel">
-                                        Y Axis: Emotional vs. Rational
-                                    </label>
-                                    <input
-                                            type="range"
-                                            id="yRange"
-                                            min="1"
-                                            max="5"
-                                            value="3"
-                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                                    />
-                                </div>
-
-                                <div class="slider-group">
-                                    <label class="block text-sm font-medium text-gray-700 mb-2" id="zLabel">
-                                        Z Axis: Risk-Averse vs. Risk-Taking
-                                    </label>
-                                    <input
-                                            type="range"
-                                            id="zRange"
-                                            min="1"
-                                            max="5"
-                                            value="3"
-                                            class="w-full h-2 bg-gray-200 rounded-lg appearance-none cursor-pointer"
-                                    />
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Comparison Controls -->
-                        <div class="bg-white p-6 rounded-lg shadow-md">
-                            <div class="space-y-2 mb-8">
-                                <div class="flex items-center mb-2">
-                                    <div class="w-3 h-3 rounded-full bg-blue-600 mr-2"></div>
-                                    <span class="font-semibold">Comparison Position</span>
-                                </div>
-
-                                <div class="slider-group">
-                                    <label id="xLabelComparison">X Axis: Individualism vs. Collectivism</label>
-                                    <input type="range" id="xRangeComparison" min="1" max="5" value="3" class="w-full">
-                                </div>
-
-                                <div class="slider-group">
-                                    <label id="yLabelComparison">Y Axis: Emotional vs. Rational</label>
-                                    <input type="range" id="yRangeComparison" min="1" max="5" value="3" class="w-full">
-                                </div>
-
-                                <div class="slider-group">
-                                    <label id="zLabelComparison">Z Axis: Risk-Averse vs. Risk-Taking</label>
-                                    <input type="range" id="zRangeComparison" min="1" max="5" value="3" class="w-full">
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <!-- Right panel - Visualization (2/3 width) -->
-                    <div class="w-full lg:w-2/3">
-                        <div class="space-y-8">
-                            <div class="bg-white rounded-lg shadow-md p-4">
-                                <div id="cube-container" class="w-full h-96 bg-white rounded-lg"></div>
-                            </div>
-
-                            <div class="grid grid-cols-1 md:grid-cols-2 gap-4">
-                                <div id="descriptionBox" class="bg-white p-6 rounded-lg shadow-md space-y-4"></div>
-                                <div id="comparisonDescriptionBox" class="bg-white p-6 rounded-lg shadow-md space-y-4"></div>
-                            </div>
-
-                            <div id="comparisonAnalysis" class="bg-white p-6 rounded-lg shadow-md"></div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-    </section>
-
-    <section class="section bg-white py-16">
-        <div class="container mx-auto px-4 text-center">
-            <p class="text-lg mb-8">Want to learn more about how the SMLC model can benefit you?</p>
-            <div class="flex justify-center space-x-4">
-                <a href="explore.html" class="btn">Learn More About SMLC</a>
-                <a href="contact.html" class="btn">Contact Us</a>
-            </div>
-        </div>
-    </section>
-
-    <section class="section bg-secondary py-16">
-        <div class="container mx-auto px-4 text-center">
-            <h2 class="text-3xl font-bold mb-4">License</h2>
-            <p class="text-lg">
-                Sina's Multidimensional Leadership Cube (SMLC) is licensed under the
-                <a href="https://creativecommons.org/licenses/by/4.0/" class="text-primary hover:underline" target="_blank">CC BY 4.0</a> license.
-                You are free to share and adapt the material for any purpose, even commercially, as long as appropriate credit is given.
-            </p>
-        </div>
-    </section>
-
-</main>
-
-<footer class="bg-white py-8">
-    <div class="container mx-auto px-4 flex flex-wrap justify-between items-center">
-        <div class="social-media mb-4 lg:mb-0">
-            <a href="https://www.linkedin.com/in/sinaghazi" class="inline-block" target="_blank">
-                <img src="img/linkedin-icon.png" alt="LinkedIn" class="w-8 h-8">
-            </a>
-        </div>
-        <div class="footer-links">
-            <a href="privacy-policy.html" class="text-gray-700 hover:text-primary mr-4">Privacy Policy</a>
-            <a href="terms-of-service.html" class="text-gray-700 hover:text-primary">Terms of Service</a>
-        </div>
-    </div>
-</footer>
-
-<script src="js/common.js"></script>
-
-<script type="module" src="js/cube.js"></script>
-
+<body>
+<div id="root"></div>
+<script type="module" src="/src/main.tsx"></script>
 </body>
 </html>
